Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33156

Server crashes when starting the server with innodb-force-recovery=6 and enabling the innodb_buf_flush_list_now variable.

    XMLWordPrintable

Details

    Description

      # mysqld options required for replay:  --innodb-force-recovery=6
      SET GLOBAL innodb_buf_flush_list_now=ON;
      

      Leads to

      11.4.0 3fad2b115569864d8c1b7ea90ce92aa895cfef08 (Debug)

      mariadbd: /test/mtest/11.4_dbg/storage/innobase/buf/buf0dblwr.cc:720: void buf_dblwr_t::flush_buffered_writes(): Assertion `!srv_read_only_mode' failed.
      

      11.4.0 3fad2b115569864d8c1b7ea90ce92aa895cfef08 (Debug)

      Core was generated by `/test/mtest/MD010124-mariadb-11.4.0-linux-x86_64-dbg/bin/mariadbd --no-defaults'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x148f9c0c4700 (LWP 2200834))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x0000148fa0094859 in __GI_abort () at abort.c:79
      #2  0x0000148fa0094729 in __assert_fail_base (fmt=0x148fa022a588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x559cfe88ce1c "!srv_read_only_mode", file=0x559cfe8f49c0 "/test/mtest/11.4_dbg/storage/innobase/buf/buf0dblwr.cc", line=720, function=<optimized out>) at assert.c:92
      #3  0x0000148fa00a5fd6 in __GI___assert_fail (assertion=assertion@entry=0x559cfe88ce1c "!srv_read_only_mode", file=file@entry=0x559cfe8f49c0 "/test/mtest/11.4_dbg/storage/innobase/buf/buf0dblwr.cc", line=line@entry=720, function=function@entry=0x559cfe8f4cf0 "void buf_dblwr_t::flush_buffered_writes()") at assert.c:101
      #4  0x0000559cfe2e9b1e in buf_dblwr_t::flush_buffered_writes (this=0x559cff969000 <buf_dblwr>) at /test/mtest/11.4_dbg/storage/innobase/buf/buf0dblwr.cc:720
      #5  0x0000559cfe2f887c in buf_flush_list_space (space=<optimized out>, n_flushed=n_flushed@entry=0x0) at /test/mtest/11.4_dbg/storage/innobase/buf/buf0flu.cc:1715
      #6  0x0000559cfe0237e1 in buf_flush_list_now_set (save=<optimized out>) at /test/mtest/11.4_dbg/storage/innobase/handler/ha_innodb.cc:18194
      #7  0x0000559cfd9b799f in sys_var_pluginvar::global_update (this=0x559cfffa8ce8, thd=0x148f74000d48, var=0x148f74013678) at /test/mtest/11.4_dbg/sql/sql_plugin.cc:3698
      #8  0x0000559cfd8ac1a4 in sys_var::update (this=0x559cfffa8ce8, thd=0x148f74000d48, var=0x148f74013678) at /test/mtest/11.4_dbg/sql/set_var.cc:207
      #9  0x0000559cfd8ac6e7 in set_var::update (this=<optimized out>, thd=<optimized out>) at /test/mtest/11.4_dbg/sql/set_var.cc:851
      #10 0x0000559cfd8ad8f7 in sql_set_variables (thd=thd@entry=0x148f74000d48, var_list=var_list@entry=0x148f74006168, free=free@entry=true) at /test/mtest/11.4_dbg/sql/set_var.cc:733
      #11 0x0000559cfd99ac73 in mysql_execute_command (thd=thd@entry=0x148f74000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/mtest/11.4_dbg/sql/sql_parse.cc:4788
      #12 0x0000559cfd985d20 in mysql_parse (thd=thd@entry=0x148f74000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x148f9c0c32b0) at /test/mtest/11.4_dbg/sql/sql_parse.cc:7798
      #13 0x0000559cfd993bfc in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x148f74000d48, packet=packet@entry=0x148f7400b1b9 "SET GLOBAL innodb_buf_flush_list_now=ON", packet_length=packet_length@entry=39, blocking=blocking@entry=true) at /test/mtest/11.4_dbg/sql/sql_class.h:1552
      #14 0x0000559cfd996328 in do_command (thd=0x148f74000d48, blocking=blocking@entry=true) at /test/mtest/11.4_dbg/sql/sql_parse.cc:1406
      #15 0x0000559cfdb10eb5 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x559d00462288, put_in_cache=put_in_cache@entry=true) at /test/mtest/11.4_dbg/sql/sql_connect.cc:1417
      #16 0x0000559cfdb1146a in handle_one_connection (arg=arg@entry=0x559d00462288) at /test/mtest/11.4_dbg/sql/sql_connect.cc:1319
      #17 0x0000559cfdf7f54c in pfs_spawn_thread (arg=0x559d003b5b58) at /test/mtest/11.4_dbg/storage/perfschema/pfs.cc:2201
      #18 0x0000148fa05a5609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #19 0x0000148fa0191133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      MariaDB: 10.5.24 (dbg), 10.6.17 (dbg), 10.11.7 (dbg), 11.0.5 (dbg), 11.1.4 (dbg), 11.2.3 (dbg), 11.3.2 (dbg), 11.4.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.33 (dbg), 10.4.33 (opt), 10.5.24 (opt), 10.6.17 (opt), 10.11.7 (opt), 11.0.5 (opt), 11.1.4 (opt), 11.2.3 (opt), 11.3.2 (opt), 11.4.0 (opt)

      Attachments

        Activity

          People

            marko Marko Mäkelä
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h 5m
                1h 5m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.